fix navbar color, navbar, text, button align, button size

--- a/gnosis/catalog/static/css/style.css
+++ b/gnosis/catalog/static/css/style.css
@@ -25,3 +25,14 @@
     background: #59d143;
 }
 
+@media screen and (max-width: 599px) {
+    .row{
+        margin-left: 0px !important;
+    }
+
+
+}
+
+
+
+
