--- a/gnosis/static/css/gnosis_theme.css
+++ b/gnosis/static/css/gnosis_theme.css
@@ -83,6 +83,9 @@
     #small {
         display: none;
     }
+    .navButton{
+        font-size: 15px;
+    }
 }
 
 /*
